--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ spark {
 
 csv {
   header="Tabla;Code;Name;Modification Date;Format;Data Type;Primary;Mandatory;Formato Logico;columnaLegacy"
-  delimiter=";"
+  delimiter=","
 }
 
 database {
